@@ -1,3 +1,8 @@
+2003-06-03  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/libcommon/munge_msg.c(_munge_msg_recv):
+	  Fixed bug with unexpected message length assert.
+
 2003-05-30  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* doc/credential-v1-format: Added.
